# aphrovex

./: Cargo.toml  LICENSE  README.md
assets/img/: starfish.aseprite
gui/: Cargo.toml
gui/src/: about.rs  close_dialog.rs  display.rs  distance.rs  ipc.rs  main.rs  menubar.rs  motors.rs  prefs.rs
gui/src/display/: input.rs  ipc.rs  mod.rs  panel.rs  texture.rs  window.rs
gui/src/ipc/: mod.rs
ipc/: Cargo.toml
src/: about.rs  close_dialog.rs  main.rs  menubar.rs  prefs.rs
src/display/: input.rs  ipc.rs  texture.rs  window.rs
src/ipc/: thread.rs
