[workspace]
members = ["gui"]
resolver = "3"
default-members = ["gui"]

[workspace.package]
version = "0.1.0"
authors = ["Harshal <saturnyx@disroot.org>"]
description = "A GUI Client for Roboscope IPC"
license = "MIT"
repository = "https://github.com/saturnyx/archipelago"

[workspace.dependencies]
roboscope-ipc = { git = "https://github.com/lewisfm/vex-simulation" }
egui-thematic = { git = "https://github.com/Saturnyx/egui-thematic" } # Custom version
