[package]
name = "archi-gui"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
egui-snarl = "0.9.0"
bytemuck = "1.25.0"
eframe = { version = "0.34.2", features = ["persistence"] }
anyhow = "1.0.102"
egui = { version = "0.34.2", features = ["persistence"] }
env_logger = "0.11.10"
fast_image_resize = "6.0.0"
iceoryx2 = "0.8.1"
rand = "0.10.1"
roboscope-ipc = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
egui-thematic = { workspace = true }
